--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-
+import Basic from '../components/Basic.astro';
 ---
 
 <html lang="en">
@@ -13,5 +13,6 @@
   <body>
     <h1>Astro</h1>
     <a href="page/based/routing">Go to paged based routing</a>
+    <Basic value="boomble" />
   </body>
 </html>
