--- a/src/components/Basic.astro
+++ b/src/components/Basic.astro
@@ -1,6 +1,11 @@
 ---
-const { value } = Astro.props;
+interface Props {
+  word: string;
+  greeting?: string;
+}
+
+const { word } = Astro.props;
 ---
 
 <p>This is a basic Astro component.</p>
-<p>You passed in the word "<b>{value}</b>" via the props.</p>
+<p>You passed in the word "<b>{word}</b>" via the props.</p>
