--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,6 +13,6 @@ import Basic from '../components/Basic.astro';
   <body>
     <h1>Astro</h1>
     <a href="page/based/routing">Go to paged based routing</a>
-    <Basic value="boomble" />
+    <Basic word="boomble" />
   </body>
 </html>
