--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import Basic from '../components/Basic.astro';
+import UseSlot from '../components/UseSlot.astro';
 ---
 
 <html lang="en">
@@ -14,5 +15,8 @@ import Basic from '../components/Basic.astro';
     <h1>Astro</h1>
     <a href="page/based/routing">Go to paged based routing</a>
     <Basic word="boomble" />
+    <UseSlot>
+      This content will be slotted into the &lt;slot&gt;.
+    </UseSlot>
   </body>
 </html>
