--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,7 +16,7 @@ import UseSlot from '../components/UseSlot.astro';
     <a href="page/based/routing">Go to paged based routing</a>
     <Basic word="boomble" />
     <UseSlot>
-      This content will be slotted into the &lt;slot&gt;.
+      This content will be slotted into the &lt;slot&gt; tag in the UseSlot component.
     </UseSlot>
   </body>
 </html>
