Add styling to component and to site

--- a/src/components/Basic.astro
+++ b/src/components/Basic.astro
@@ -9,3 +9,9 @@ const { word } = Astro.props;
 
 <p>This is a basic Astro component.</p>
 <p>You passed in the word "<b>{word}</b>" via the props.</p>
+
+<style>
+  p {
+    color: blue;
+  }
+</style>
