--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import Basic from '../components/Basic.astro';
 import UseSlot from '../components/UseSlot.astro';
 import BaseLayout from '../layouts/BaseLayout.astro';
+import '../styles/global.css';
 ---
 
 <BaseLayout>
