--- a/src/pages/page/based/routing.astro
+++ b/src/pages/page/based/routing.astro
@@ -1,16 +1,9 @@
 ---
-
+import BaseLayout from "../../../layouts/BaseLayout.astro";
 ---
 
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width" />
-    <meta name="generator" content={Astro.generator} />
-    <title>Page-based Routing</title>
-  </head>
+<BaseLayout>
   <body>
     <h3>This is a page in the <code>/pages/page/based</code> folder called <code>routing.astro</code></h3>
   </body>
-</html>
+</BaseLayout>
