--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,5 +1,6 @@
 ---
-
+import Footer from "../components/Footer.astro";
+import Header from "../components/Header.astro";
 ---
 
 <html lang="en">
@@ -11,7 +12,8 @@
     <title>Astro</title>
   </head>
   <body>
+    <Header title="My Cool Website"/>
     <slot />
+    <Footer />
   </body>
 </html>
-</body>
