Add link to fred

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,4 +11,5 @@ import BaseLayout from '../layouts/BaseLayout.astro';
   <UseSlot>
     This content will be slotted into the &lt;slot&gt; tag in the UseSlot component.
   </UseSlot>
+  <a href="fred">The Wit and Wisdom of Fred Flintstone by Barney Rubble</a>
 </BaseLayout>
