--- a/src/layouts/BlogPostLayout.astro
+++ b/src/layouts/BlogPostLayout.astro
@@ -8,6 +8,7 @@ const { frontmatter } = Astro.props;
   <h1>{frontmatter.title}</h1>
   <h2>Post author: {frontmatter.author}</h2>
   <p>{frontmatter.description}</p>
+  <p>{frontmatter.date}</p>
   <slot />
 </BaseLayout>
 
