--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,5 +9,6 @@ const { title } = Astro.props;
 
 <header class="bg-gray-800 text-white p-4">
   <h1 class="text-xl font-bold">{title}</h1>
+  <p><a href="/">Home</a></p>
 </header>
 <hr>
