--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -19,6 +19,6 @@ import { ViewTransitions } from 'astro:transitions';
   <main transition:animate="slide">
     <slot />
    </main>
-    <Footer />
-  </main></body
->
+   <Footer />
+  </main>
+</body>
