--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,10 +1,17 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro';
+import { actions  } from 'astro:actions';
 ---
 
 <BaseLayout>
   <h1>Say Hi to me!</h1>
-  <form method="POST">
+  <form
+    onSubmit={async (e) => {
+      e.preventDefault();
+      const formData = new FormData(e.target as HTMLFormElement);
+      const result = await actions.contact(formData);
+      console.log('Result: ', result);
+    }}>
     <div>
       <input type="text" name="name" placeholder="Name" />
     </div>
