--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,28 +1,27 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro';
-import { actions  } from 'astro:actions';
+import { actions } from 'astro:actions';
+
+export const prerender = false;
+
+const result = Astro.getActionResult(actions.contact);
+
 ---
 
 <BaseLayout>
   <h1>Say Hi to me!</h1>
-  <form
-    onSubmit={async (e) => {
-      e.preventDefault();
-      const formData = new FormData(e.target as HTMLFormElement);
-      const result = await actions.contact(formData);
-      console.log('Result: ', result);
-    }}>
+  <form method="POST" action={actions.contact} ; id="contact-form">
     <div>
-      <input type="text" name="name" placeholder="Name" />
+      <input required type="text" name="name" placeholder="Name" />
     </div>
     <div>
-      <input type="email" name="email" placeholder="Email" />
+      <input required type="email" name="email" placeholder="Email" />
     </div>
     <div>
       <textarea name="message" placeholder="Message"></textarea>
     </div>
     <div>
-      <button type="submit">Send</button>
+      <button>Send</button>
     </div>
   </form>
 </BaseLayout>
