--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -29,7 +29,7 @@ export const prerender = false;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    max-width: 700px;
+    max-width: 100%;
     margin: 0 auto;
     padding: 20px;
     border: 1px solid #ccc;
