Basics of AstroDB

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,9 +1,26 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro';
 import { actions } from 'astro:actions';
+import { NOW } from 'astro:db';
 
 export const prerender = false;
 
+import { db, Contacts } from 'astro:db';
+
+if (Astro.request.method === 'POST') {
+  // parse form data
+  const formData = await Astro.request.formData();
+  const name = formData.get('name');
+  const email = formData.get('email');
+  const message = formData.get('message');
+  const timestamp = NOW;
+  if (typeof name === 'string' && typeof email === 'string' && typeof message === 'string') {
+    // insert form data into the Comment table
+    await db.insert(Contacts).values({ timestamp, name, email, message });
+  }
+}
+
+const contacts = await db.select().from(Contacts);
 ---
 
 <BaseLayout>
@@ -22,6 +39,18 @@ export const prerender = false;
       <button>Send</button>
     </div>
   </form>
+  <hr />
+
+  {
+    contacts.map(({ name, email, message, timestamp }) => (
+      <article>
+        <p>Name: {name}</p>
+        <p>Email: {email}</p>
+        <p>Date: {timestamp}</p>
+        <p>Message: {message}</p>
+      </article>
+    ))
+  }
 </BaseLayout>
 
 <style>
