--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,4 +1,6 @@
 ---
+import Avatar from './Avatar.astro';
+
 type Props = {
   title: string;
 };
@@ -10,5 +12,10 @@ const { title } = Astro.props;
 <header class="bg-gray-800 text-white p-4">
   <h1 class="text-xl font-bold">{title}</h1>
   <p><a href="/">Home</a> | <a href="/blog">Blog</a> | <a href="/contact">Contact</a></p>
+  <Avatar server:defer >
+    <div slot="fallback">
+      <img src="https://placehold.co/60">
+    </div>
+  </Avatar>
 </header>
 <hr>
