--- a/src/pages/quote/[id].astro
+++ b/src/pages/quote/[id].astro
@@ -11,5 +11,5 @@ export const prerender = false;
 ---
 
 <BaseLayout>
-  <QuoteComponent theQuote={aQuote} server:defer />
+  <QuoteComponent theQuote={aQuote}  />
 </BaseLayout>
