Add quote stuff

--- a/src/components/QuoteComponent.astro
+++ b/src/components/QuoteComponent.astro
@@ -10,7 +10,7 @@ const { theQuote } = Astro.props as QuoteProps;
 
 <div class="quote-container">
   <blockquote>
-    <p>"{theQuote.quote}"</p>
+    <p><a href=`/quote/${theQuote.id}`>#</a> "{theQuote.quote}"</p>
     <footer>— {theQuote.author}</footer>
   </blockquote>
 </div>
