No server defer

--- a/src/pages/randomquote.astro
+++ b/src/pages/randomquote.astro
@@ -9,5 +9,5 @@ export const prerender = false;
 ---
 
 <BaseLayout>
-  <QuoteComponent theQuote={aQuote} server:defer />
+  <QuoteComponent theQuote={aQuote} />
 </BaseLayout>
