--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -11,10 +11,10 @@ const { title } = Astro.props;
 
 <header class="bg-gray-800 text-white p-4">
   <h1 class="text-xl font-bold">{title}</h1>
-  <p><a href="/">Home</a> | <a href="/blog">Blog</a> | <a href="/contact">Contact</a> | <a href="/randomquote">Random Quote</a></p>
-  <Avatar server:defer >
+  <p><a href="/">Home</a> | <a href="/blog">Blog</a> | <a href="/contact">Contact</a> | <a href="/randomquote">Random Quote</a>| <a href="/images">Images</a></p>
+  <Avatar server:defer>
     <div slot="fallback">
-      <img src="https://placehold.co/60">
+      <img src="https://placehold.co/60" />
     </div>
   </Avatar>
 </header>
