Make the Avatar graphic local

--- a/src/components/Avatar.astro
+++ b/src/components/Avatar.astro
@@ -1,7 +1,7 @@
 ---
 const fetchAvatar = async () => {
   await new Promise((res) => setTimeout(res, 1500));
-  return 'https://yt3.ggpht.com/yti/ANjgQV9_iUWf7NjpDQ8hjUwShtFWKwkDRQiKv5MuWc2LCDs4ds0=s88-c-k-c0x00ffffff-no-rj';
+  return '/public/NickAvatar.jpg';
 };
 
 const avatarImage = await fetchAvatar();
