Better reference for image

--- a/src/components/Avatar.astro
+++ b/src/components/Avatar.astro
@@ -1,7 +1,7 @@
 ---
 const fetchAvatar = async () => {
   await new Promise((res) => setTimeout(res, 1500));
-  return '/public/NickAvatar.jpg';
+  return '/NickAvatar.jpg';
 };
 
 const avatarImage = await fetchAvatar();
