--- a/src/components/Avatar.astro
+++ b/src/components/Avatar.astro
@@ -1,7 +1,13 @@
 ---
-const fetchAvatar = async () => {
+const fetchAvatar = async (): Promise<string> => {
   await new Promise((res) => setTimeout(res, 1500));
-  return '/NickAvatar.jpg';
+
+  const avatars = ['/man.png', '/woman.png', '/NickAvatar.jpg'];
+  const randomIndex = Math.floor(Math.random() * avatars.length);
+
+  const avatar = avatars[randomIndex] ?? '/NickAvatar.png';
+
+  return avatar;
 };
 
 const avatarImage = await fetchAvatar();
