--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -1,11 +1,12 @@
 ---
 import type { GetStaticPaths } from 'astro';
 import BlogPostLayout from '../../layouts/BlogPostLayout.astro';
-import { getCollection } from 'astro:content';
+import { getCollection, type CollectionEntry } from 'astro:content';
+
 
 export const getStaticPaths = (async () => {
   const blogEntries = await getCollection('blog');
-  return blogEntries.map((entry) => ({
+  return blogEntries.map((entry: CollectionEntry<'blog'>) => ({
     params: { slug: entry.slug },
     props: { entry },
   }));
