This all was lost, somehow.

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,7 +1,9 @@
 ---
+import { Contacts, db } from 'astro:db';
 import BaseLayout from '../layouts/BaseLayout.astro';
 import { actions } from 'astro:actions';
 
+const contacts = await db.select().from(Contacts);
 export const prerender = false;
 ---
 
@@ -22,6 +24,24 @@ export const prerender = false;
     </div>
   </form>
   <hr />
+  {
+    contacts.map(({ name, email, message, timestamp }) => (
+      <article class="card">
+        <p>
+          <strong>Name:</strong> {name}
+        </p>
+        <p>
+          <strong>Email:</strong> {email}
+        </p>
+        <p>
+          <strong>Date:</strong> {timestamp}
+        </p>
+        <p>
+          <strong>Message:</strong> {message}
+        </p>
+      </article>
+    ))
+  }
 </BaseLayout>
 
 <style>
